# rqm-pennylane

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_quaternion_rotation.py  hybrid_cost_example.py  variational_single_qubit.py
src/rqm_pennylane/: __init__.py  devices.py  export.py  gates.py  py.typed  templates.py  variational.py  wrappers.py
tests/: test_export.py  test_gates.py  test_imports.py  test_templates.py  test_variational.py  test_wrappers.py
