[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rqm-pennylane"
version = "0.1.0"
description = "Differentiable and hybrid quantum workflows for the RQM ecosystem, built on PennyLane and rqm-core."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RQM Technologies", email = "dev@rqm-technologies.io" }]
requires-python = ">=3.9"
dependencies = [
    "pennylane>=0.36",
    "numpy>=1.24",
    "rqm-core>=0.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
keywords = [
    "quantum-computing",
    "pennylane",
    "variational-quantum-circuits",
    "quantum-machine-learning",
    "quaternions",
    "su2",
    "qml",
    "differentiable-programming",
    "hybrid-quantum-classical",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-pennylane"
Source = "https://github.com/RQM-Technologies-dev/rqm-pennylane"
Issues = "https://github.com/RQM-Technologies-dev/rqm-pennylane/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rqm_pennylane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
